css/style.css
.outline-2, #footnotes{
    max-width: 600px
}

header {
    height:270px;
}

body {
    position: relative;
}

a {
    color: inherit;
    text-decoration: none;
}

pre.src {
    overflow: auto;
}

#table-of-contents {
    /*     text-align: right; */
    /* overflow: scroll; */
}

.title {
    text-align: left;
}

code{
    color:black !important;
}

.panel-heading {
    cursor: pointer;
}

/* Stolen from getbootstrap.com */

@media (min-width:768px){
    .nav-list{
        padding-left:20px
    }

}

.nav-list .nav>li>a{
    display:block;
    padding:4px 20px;
    font-size:13px;
    font-weight:500;
    color:#999
}

.nav-list .nav>li>a:hover,.nav-list .nav>li>a:focus{
    padding-left:19px;
    color:#563d7c;
    text-decoration:none;
    background-color:transparent;
    border-left:1px solid #563d7c
}

.nav-list .nav>.active>a,.nav-list .nav>.active:hover>a,.nav-list .nav>.active:focus>a{
    padding-left:18px;
    font-weight:700;
    color:#563d7c;
    background-color:transparent;
    border-left:2px solid #563d7c
}

.nav-list .nav .nav{
    display:none;
    padding-bottom:10px
}

.nav-list .nav .nav>li>a{
    padding-top:1px;
    padding-bottom:1px;
    padding-left:30px;
    font-size:12px;
    font-weight:400
}

.nav-list .nav .nav>li>a:hover,.nav-list .nav .nav>li>a:focus{
    padding-left:29px
}

.nav-list .nav .nav>.active>a,.nav-list .nav .nav>.active:hover>a,.nav-list .nav .nav>.active:focus>a{
    padding-left:28px;
    font-weight:500
}

@media (min-width:992px){


    .nav-list.affix{
        position:fixed;
        top:20px
    }

    .nav-list.affix-bottom{
        position:absolute
    }

    .nav-list.affix-bottom .bs-docs-sidenav,.nav-list.affix .bs-docs-sidenav{
        margin-top:0;
        margin-bottom:0
    }

}

@media (min-width:1200px){
    .nav-list.affix-bottom,.nav-list.affix{
        width:263px
    }

}

